--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "fontawesome": "^5.6.3",
     "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.0.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-image-gallery": "^1.0.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
