--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "classnames": "^2.3.1",
     "fontawesome": "^5.6.3",
     "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
