--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-image-gallery": "^1.0.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
@@ -25,7 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
