--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debounce": "^1.2.1",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
+    "react-awesome-stars-rating": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-player": "^2.9.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.1.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.45.0",
